<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".calculator">

    <ImageView
            android:src="@color/Material500_Orange"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/imageView2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tableLayout"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="360dp" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/tableLayout">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1">
            <Button
                    android:text="@string/num_c"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/Num_Clear"
                    android:layout_weight="1" android:textSize="24sp"/>
            <Button
                    android:text="@string/num_divide"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/Num_Divide"
                    android:layout_weight="1" android:textSize="24sp"/>
            <Button
                    android:text="@string/num_multiply"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/Num_Multiply"
                    android:layout_weight="1" android:textSize="24sp"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_height="match_parent" app:srcCompat="@drawable/ic_backspace_black_24dp"
                    android:id="@+id/Num_Back" android:layout_weight="1" android:contentDescription="@string/num_back"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:padding="0dp"
                  android:textAlignment="center" android:layout_weight="1">
            <Button
                    android:text="@string/num_7"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num7" android:layout_weight="1"
                    android:textSize="24sp"/>
            <Button
                    android:text="@string/num_8"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num8" android:layout_weight="1"
                    android:textSize="24sp"/>
            <Button
                    android:text="@string/num_9"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num9" android:layout_weight="1"
                    android:textSize="24sp"/>
            <Button
                    android:text="@string/num_minus"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num_Minus" android:layout_weight="1"
                    android:textSize="24sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
            <Button
                    android:text="@string/num_4"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num4" android:layout_weight="1"
                    android:textSize="24sp"/>
            <Button
                    android:text="@string/num_5"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num5" android:layout_weight="1"
                    android:textSize="24sp"/>
            <Button
                    android:text="@string/num_6"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num6" android:layout_weight="1"
                    android:textSize="24sp"/>
            <Button
                    android:text="@string/num_plus"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num_Plus" android:layout_weight="1"
                    android:textSize="24sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
            <Button
                    android:text="@string/num_1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num1" android:layout_weight="1"
                    android:textSize="24sp"/>
            <Button
                    android:text="@string/num_2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num2" android:layout_weight="1"
                    android:textSize="24sp"/>
            <Button
                    android:text="@string/num_3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num3" android:layout_weight="1"
                    android:textSize="24sp"/>
            <Button
                    android:text="@string/num_percent"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num_Percent" android:layout_weight="1"
                    android:textSize="24sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
            <Button
                    android:text="@string/num_00"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num00" android:layout_weight="1"
                    android:textSize="24sp"/>
            <Button
                    android:text="@string/num_0"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num0" android:layout_weight="1"
                    android:textSize="24sp"/>
            <Button
                    android:text="."
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/NumDot" android:layout_weight="1"
                    android:textSize="24sp"/>
            <Button
                    android:text="@string/num_result"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/Num_Equal" android:layout_weight="1"
                    android:textSize="24sp"/>
        </TableRow>
    </TableLayout>
    <EditText
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/Num_Display"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout" android:inputType="none"
            android:textColor="@color/White" android:textSize="48sp" android:textAlignment="textEnd"
            android:text="@string/num_0"/>
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            tools:layout_editor_absoluteX="-34dp" android:id="@+id/calculator_toolbar"
            app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Num_Display_All"
            app:layout_constraintBottom_toTopOf="@+id/Num_Display" app:layout_constraintEnd_toEndOf="@+id/Num_Display"/>
</androidx.constraintlayout.widget.ConstraintLayout>